Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2>
 <a id="author" class="anchor" href="#author" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Author</h2>
 
-<p>Mikael Vesavuori (Being: <a href="http://www.being.se">www.being.se</a>), 2015-2016</p>
+<p>Mikael Vesavuori (Being: <a href="http://www.being.se">www.being.se</a>), 2015-2016)</p>
 
 <h2>
 <a id="current-version" class="anchor" href="#current-version" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Current version</h2>
