Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,16 +29,14 @@
       </header>
       <section>
         <h2>
-<a id="author" class="anchor" href="#author" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Author</h2>
-
-<p>Mikael Vesavuori (Being: <a href="http://www.being.se">www.being.se</a>), 2015-2016)</p>
-
-<h2>
 <a id="current-version" class="anchor" href="#current-version" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Current version</h2>
 
-<p>Version: 2.2</p>
+<p>Version: 2.2 (20160817)</p>
 
-<p>Latest revision: 20160817</p>
+<h2>
+<a id="author" class="anchor" href="#author" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Author</h2>
+
+<p><a href="http://www.mikaelvesavuori.se">Mikael Vesavuori</a> for <a href="http://www.being.se">Being</a>, 2015-2016</p>
 
 <h2>
 <a id="what-is-only-framework" class="anchor" href="#what-is-only-framework" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What is Only Framework?</h2>
