--- a/app/index-critical.html
+++ b/app/index-critical.html
@@ -39,10 +39,10 @@
 		<meta name="description" content="">
 		<meta name="keywords" content="">
 
-		<link rel="preload" href="css/main.min.css" as="style" onload="this.rel='stylesheet'">
-		<noscript><link rel="stylesheet" href="css/main.min.css"></noscript>
+		<link rel="preload" href="css/main.css" as="style" onload="this.rel='stylesheet'">
+		<noscript><link rel="stylesheet" href="css/main.css"></noscript>
 		<style type="text/css">
-header,main{display:block;padding:0;float:left}.wrapper,header,main{width:100%}body{margin:0}::-webkit-input-placeholder{color:inherit;opacity:.54}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}html{overflow:auto;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;line-height:1.6;box-sizing:border-box;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;font-size:1rem}*,:after,:before{box-sizing:inherit}.wrapper{padding:0;margin:0 auto}main{margin:0}body{color:#1e1e1e;font-weight:300;background-color:#00ff7f}header{clear:both;margin:0 0 2em}@media only screen and (max-width:768px){.wrapper{max-width:768px}}@media screen and (min-width:320px){html{font-size:.75rem;line-height:1.52}}@media screen and (min-width:768px){html{font-size:.85rem;line-height:1.52}}@media screen and (min-width:1024px){html{font-size:1rem;line-height:1.6}}
+header,main{display:block}.wrapper,header,main{width:100%;padding:0}::-webkit-input-placeholder{color:inherit;opacity:.54}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;box-sizing:border-box;overflow:auto;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;font-size:1rem;line-height:1.6}*,:after,:before{box-sizing:inherit}main{margin:0;float:left}body{margin:0;color:#1e1e1e;font-weight:300;background-color:#cd5c5c}header{clear:both;float:left;margin:0 0 2em}@media only screen and (max-width:768px){.wrapper{max-width:768px}}@media screen and (min-width:320px){html{font-size:.75rem;line-height:1.52}}@media screen and (min-width:768px){html{font-size:.85rem;line-height:1.52}}@media screen and (min-width:1024px){html{font-size:1rem;line-height:1.6}}
 </style>
 <script id="loadcss">
 (function(u,s){!function(e){"use strict";var n=function(n,t,o){var l,r=e.document,i=r.createElement("link");if(t)l=t;else{var a=(r.body||r.getElementsByTagName("head")[0]).childNodes;l=a[a.length-1]}var d=r.styleSheets;i.rel="stylesheet",i.href=n,i.media="only x",l.parentNode.insertBefore(i,t?l:l.nextSibling);var f=function(e){for(var n=i.href,t=d.length;t--;)if(d[t].href===n)return e();setTimeout(function(){f(e)})};return i.onloadcssdefined=f,f(function(){i.media=o||"all"}),i};"undefined"!=typeof module?module.exports=n:e.loadCSS=n}("undefined"!=typeof global?global:this);for(var i in u){loadCSS(u[i],s);}}(['https://fonts.googleapis.com/css?family=Inconsolata'],document.getElementById("loadcss")));
@@ -57,21 +57,21 @@ header,main{display:block;padding:0;float:left}.wrapper,header,main{width:100%}b
 		
 		<div class="wrapper">
 			<main>
-				
+				Site title
 			</main>
 		</div>
 
 		<!-- LOAD ALL RENDER-BLOCKING CODE HERE -->
-		<!-- build:js scripts/critical.js -->
-		<script type="text/javascript" src="scripts/site/only-critical.min.js"></script>
+		<!-- build:js scripts/useref/critical.js -->
+		<script type="text/javascript" src="scripts/only/only-critical.min.js"></script>
 		<!-- endbuild -->
 		
-		<!-- build:js scripts/scripts.js async -->
-		<script type="text/javascript" src="scripts/site/only-fragment.min.js"></script>
-		<script type="text/javascript" src="scripts/site/only-scripts.min.js"></script>
+		<!-- build:js scripts/useref/scripts.js async -->
+		<script type="text/javascript" src="scripts/only/only-fragment.min.js"></script>
+		<script type="text/javascript" src="scripts/only/only-scripts.min.js"></script>
 		<!-- endbuild -->
 		
-		<!-- build:js scripts/bower.js async -->
+		<!-- build:js scripts/useref/bower.js async -->
 		<script type="text/javascript" src="../bower_components/fragment/fragment.js"></script>
 		<script type="text/javascript" src="../bower_components/fontfaceobserver/fontfaceobserver.js"></script>
 		<!-- endbuild -->
