--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2>
 <a id="current-version" class="anchor" href="#current-version" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Current version</h2>
 
-<p>Version: 2.2 (20160817)</p>
+<p>Version: 2.3 (20160821)</p>
 
 <h2>
 <a id="author" class="anchor" href="#author" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Author</h2>
@@ -155,7 +155,7 @@
 <h3>
 <a id="javascript" class="anchor" href="#javascript" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Javascript</h3>
 
-<p>The file <code>scripts.min.js</code> loads minified versions of:</p>
+<p>The file <code>only-scripts.min.js</code> loads minified versions of:</p>
 
 <ul>
 <li>
