--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/beingstudio">beingstudio</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages &mdash; Based on a theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="github/javascripts/scale.fix.js"></script>
     
   </body>
 </html>
