--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Only Framework by beingstudio</title>
 
-    <link rel="stylesheet" href="github/styles.css">
-    <link rel="stylesheet" href="github/theme.css">
+    <link rel="stylesheet" href="gh-pages/styles.css">
+    <link rel="stylesheet" href="gh-pages/theme.css">
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -31,7 +31,7 @@
         <h2>
 <a id="current-version" class="anchor" href="#current-version" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Current version</h2>
 
-<p>Version: 2.3 (20160821)</p>
+<p>Version: 2.3.1 (20160918)</p>
 
 <h2>
 <a id="author" class="anchor" href="#author" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Author</h2>
@@ -44,8 +44,8 @@
 <p>Only Framework is a framework that provides:</p>
 
 <ol>
-<li><p>a responsive, modular, high-performance, secure boilerplate and scaffold together with</p></li>
-<li><p>a <a href="http://www.being.se/only-demo/styleguide.html">styleguide</a> that supports development from a foundational ground towards clear visual deliveries and</p></li>
+<li><p>a responsive, modular, high-performance, secure boilerplate and scaffold</p></li>
+<li><p>a <a href="http://www.being.se/only-demo/styleguide.html">styleguide</a> that supports development from a foundational ground towards clear visual deliveries</p></li>
 <li><p>a simple Component Designer that encourages object-based composition of elements for total separation of design and development.</p></li>
 </ol>
 
@@ -78,8 +78,8 @@
 <li>Modularized CSS (layout, typography, media, etc) – just build your own components on top in their own files</li>
 <li>Minimal code interference, cascading problems and CSS bloat</li>
 <li>Makes as few assumptions as possible without sacrificing performance and stable code/scaffold</li>
-<li>High-performance: loads CSS, scripts and fonts asyncronously, and lazy-loads images responsively</li>
-<li>Responsive and print: should be good to go for both, but we always make very specific changes inhouse for these kinds of matters depending on the web project</li>
+<li>High-performance by loading CSS, scripts and fonts asyncronously, and lazy-loading images responsively</li>
+<li>Responsive, also prepared for print styling</li>
 </ul>
 
 <h2>
@@ -178,7 +178,7 @@
         <p><small>Hosted on GitHub Pages &mdash; Based on a theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script src="github/javascripts/scale.fix.js"></script>
+    <script src="gh-pages/javascripts/scale.fix.js"></script>
     
   </body>
 </html>
